# course_work_proga

./: CMakeLists.txt  Makefile  calculatethread.cpp  calculatethread.h  course_proga  course_proga.pro  course_work.pro  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
